--- a/index.html
+++ b/index.html
@@ -6,28 +6,17 @@
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 <body>
-<div class="card card-01">
-    <div class="card-header">
-        <h1 class="card-title">Meu card</h1>
-    </div>
-    <div class="card-body">
-        ...
-    </div>
-</div>
-<div class="card card-info card-02">
-    <div class="card-header">
-        <h1 class="card-title">Meu card</h1>
-    </div>
-    <div class="card-body">
-        ...
-    </div>
-</div>
-<div class="card card-primary card-03">
-    <div class="card-header">
-        <h1 class="card-title">Meu card</h1>
-    </div>
-    <div class="card-body">
-        ...
+
+<div class="col-lg-4">
+    <div class="card">
+        <div class="card-block">
+            <h3 class="card-title">Meu card</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis commodo sapien,
+                quis aliquet lacus. Suspendisse dictum mi eget mi elementum pharetra. In ex nunc, pharetra sit amet
+                malesuada rutrum, placerat nec tortor. Nunc lobortis interdum velit, a porttitor orci ornare id. Nulla
+                sodales velit diam, elementum porta diam rhoncus eget.
+            </p>
+        </div>
     </div>
 </div>
 </body>
