--- a/imagem.html
+++ b/imagem.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-
+<div class="col-lg-4">
+    <img src="dist/img/tigre.jpg" class="img-fluid" alt="">
+</div>
 
 </body>
 </html>
