--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
 </head>
 <body>
 
+<nav>
+    <div class="offcanvas">
+        <div class="heading">
+            <img src="dist/img/logo.png" alt="">
+        </div><!-- headind -->
+        <div class="profile">
+            <div class="profile-thumbnail">
+                <img src="dist/img/perfil.jpg" class="profile-img" alt="" >
+                <span class="profile-status"></span>
+            </div><!-- profile-thumbnail -->
+
+            <div class="profile-info">
+                <span class="profile-name">Anderson Santa Rosa</span>
+                <span class="profile-work">User Experience Developer</span>
+            </div><!-- profile-info -->
+        </div><!-- profile -->
+
+        <ul class="offcanvas-list">
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+        </ul>
+
+        <hr class="offcanvas-divider">
+
+        <ul class="offcanvas-list">
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+            <li class="list-item"><a class="list-link" href="#">item</a></li>
+        </ul>
+    </div><!-- offcanvas -->
+</nav>
 
 <script src="dist/js/jquery.js"></script>
 <script src="dist/js/jquery.mobile.custom.js"></script>
